# classes

./: .gitignore  .gitmodules
algos/notes/: day-1.yaml
fall-2017/: .gitignore  class-repos.json  note-concate.py
fall-2017/algos/: .gitignore  grades.yaml  notes.yaml
fall-2017/algos/notes/: a.out  day-10.yaml  day-11.yaml  day-12.yaml  day-13.yaml  day-14.yaml  day-15.yaml  day-16.yaml  day-17.yaml  day-18.yaml  day-19.yaml  day-2.yaml  day-20.yaml  day-21.yaml  day-22.yaml  day-23.yaml  day-3.yaml  day-4.yaml  day-5.yaml  day-6.yaml  day-7.yaml  day-8.yaml  day-9.yaml  sample_class.cpp  timeofday.h  tof_main.cpp
fall-2017/csc/: networking.yaml
fall-2017/ethics/: .gitignore  glossary.txt  index.txt  notes.yaml
fall-2017/ethics/notes/: day-10.yaml  day-11.yaml  day-12.yaml  day-13.yaml  day-14.yaml  day-3.yaml  day-4.yaml  day-5.yaml  day-6.yaml  day-7.yaml  (+2 more)
fall-2017/graphics/: .gitignore  notes.yaml
fall-2017/mining/: notes.yaml
fall-2017/stats/: notes.yaml
fall-2018/capstone/: class.conf
fall-2018/capstone/homeworks/hw1/: CMakeLists.txt  Pipfile  README.md  install.sh  requirements.txt  test.sh
fall-2018/capstone/homeworks/hw1/src/: quicksort.h
fall-2018/capstone/homeworks/hw1/tests/: test_quicksort.cpp  testing_data.py  testing_data.txt
fall-2018/robotics/: class.conf
graphics/notes/: day-1.yaml
spring-2018/: .gitignore
spring-2018/ai/: class.conf
spring-2018/architecture/: class.conf  game.py
spring-2018/construction/: class.conf
spring-2018/langs/: .gitignore
spring-2018/rendering/: .gitignore  class.conf  mkscreens.sh
(+245 files in other folders)
